# proyecto

./: README.md  main.py  pyproject.toml  uno.txt
