[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.pyright]
# 156
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# 489
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# https://beta.ruff.rs/docs/configuration/